# cb-mpc

./: .clang-format  .gitignore  BUG_BOUNTY.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURE_USAGE.md  exploit_finder_gui.py  package-lock.json  package.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: benchmark.yml  ci.yml  codacy.yml  codeql.yml  make-release.yml  msvc.yml
cb-mpc-go/: .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum
cb-mpc-go/demos/: README.md
cb-mpc-go/demos/common/: addr.go  doc.go  ecdsa_mp_ac.go  mtls.go
cb-mpc-go/demos/ecdsa2pc_mtls/: main.go
cb-mpc-go/demos/ecdsa_mp_ac_mtls/: main.go
cb-mpc-go/demos/ecdsa_mp_ac_web/: README.md  app_test.go  config.go  demo_addr.go  demo_ecdsa_mp_ac.go  demo_mtls.go  go.mod  http.go  key_material.go  main.go  protocol.go  run_demo.sh  sign_quorum.go  state.go
cb-mpc-go/demos/eddsa_mp_backup_mtls/: main.go
cb-mpc-go/demos/tdh2_mtls/: main.go
cb-mpc-go/examples/: doc.go
cb-mpc-go/examples/ecdsa2pc/: main.go
cb-mpc-go/examples/eddsa2pc/: main.go
cb-mpc-go/examples/eddsa_mp_backup/: main.go
cb-mpc-go/examples/pve_batch/: main.go
cb-mpc-go/examples/pve_showcase/: main.go
cb-mpc-go/examples/schnorr2pc/: main.go
cb-mpc-go/examples/tdh2/: main.go
cb-mpc-go/internal/cgo/: binding.go  binding_hardening_test.go  doc.go
cb-mpc-go/network/: network.h
cb-mpc-go/pkg/mpc/: SECURITY_TESTING.md  ac_flows_test.go  api_test.go  conversions.go  doc.go  ecdsa.go  eddsa_schnorr.go  error_mapping_test.go  errors.go  helper_api_test.go  job_test_helpers_test.go  keyblob_roundtrip_test.go  malicious_session_test.go  memory.go  protocol_gap_test.go  pve.go  pve_advanced_test.go  pve_custom_base_pke_test.go  sensitive.go  tdh2.go  types.go
cb-mpc-go/pkg/mpctest/: compat_test.go  doc.go  malicious_session.go  mock_session.go  session.go
cb-mpc-go/scripts/: build_cpp.sh  go_with_cpp.sh  run_demo_ecdsa2pc_mtls.sh  run_demo_ecdsa_mp_ac_mtls.sh  run_demo_ecdsa_mp_ac_web.sh  run_demo_eddsa_mp_backup_mtls.sh  run_demo_tdh2_mtls.sh  sanitize_go.sh
cb-mpc-go/scripts/certs/: generate_certs.sh
cb-mpc-go/scripts/openssl/: build-static-openssl-linux.sh  build-static-openssl-macos-m1.sh  build-static-openssl-macos.sh
cmake/: arch.cmake  compilation_flags.cmake  openssl.cmake
demo-api/ecdsa_mp_pve_backup/: CMakeLists.txt  main.cpp
demo-api/hd_keyset_ecdsa_2p/: CMakeLists.txt  main.cpp
demo-api/pve/: CMakeLists.txt  main.cpp
demo-api/schnorr_2p_pve_batch_backup/: CMakeLists.txt  main.cpp
demo-cpp/basic_primitive/: CMakeLists.txt  main.cpp
demo-cpp/common/: mpc_job_session.cpp  mpc_job_session.h
demo-cpp/parallel_transport/: CMakeLists.txt  main.cpp
demo-cpp/zk/: CMakeLists.txt  demo_nizk.h  main.cpp
demos-go/cmd/threshold-ecdsa-web/: handlers.go
demos-go/examples/ecdsa-mpc-with-backup/: main.go
demos-go/examples/zk/: main.go
dev/bench/: data.js
docs/: index.html
docs/static/: output.css
docs/static/bp-paillier/: data.js
docs/static/core-bn/: data.js
docs/static/core-ec/: data.js
docs/static/core-hash/: data.js
docs/static/ot/: data.js
docs/static/zk/: data.js
docsgen/: homepage.go  homepage.yml
docsgen/data/: aggregated_benchmarks.json  commit-sha.txt  raw_aggregated_benchmarks.json
include/cbmpc/api/: curve.h  ecdsa_2p.h  ecdsa_mp.h  eddsa_2p.h  eddsa_mp.h  hd_keyset_ecdsa_2p.h  hd_keyset_eddsa_2p.h  pve.h  pve_ac.h  pve_base_pke.h  pve_batch.h  pve_batch_ac.h  pve_batch_single_recipient.h  schnorr_2p.h  schnorr_mp.h  tdh2.h
include/cbmpc/c_api/: access_structure.h  cmem.h  common.h  ecdsa_2p.h  ecdsa_mp.h  eddsa_2p.h  eddsa_mp.h  job.h  pve_base_pke.h  pve_batch_ac.h  pve_batch_single_recipient.h  schnorr_2p.h  schnorr_mp.h  tdh2.h
include/cbmpc/capi/: common.h  ecdsa_2p.h  ecdsa_mp.h  eddsa_2p.h  eddsa_mp.h  job.h  pve.h  pve_ac.h  pve_batch.h  schnorr_2p.h  schnorr_mp.h  tdh2.h
include/cbmpc/core/: access_structure.h  bip32_path.h  buf.h  buf128.h  buf256.h  error.h  job.h  macros.h  precompiled.h
scripts/: install.sh  run-demos.sh
scripts/openssl/: build-static-openssl-linux.sh  build-static-openssl-macos-m1.sh  build-static-openssl-macos.sh
src/cbmpc/api/: CMakeLists.txt  access_structure_util.h  curve_util.h  ecdsa2pc.cpp  ecdsa_mp.cpp  eddsa2pc.cpp  eddsa_mp.cpp  hd_keyset_ecdsa_2p.cpp  hd_keyset_eddsa_2p.cpp  hd_keyset_util.h  job_util.h  mem_util.h  pve.cpp  pve_ac.cpp  pve_base_pke.cpp  pve_batch.cpp  pve_batch_ac.cpp  pve_batch_single_recipient.cpp  pve_internal.h  schnorr2pc.cpp  schnorr_mp.cpp  tdh2.cpp
src/cbmpc/c_api/: CMakeLists.txt  access_structure_adapter.h  common.cpp  ecdsa2pc.cpp  ecdsa_mp.cpp  eddsa2pc.cpp  eddsa_mp.cpp  pve_base_pke.cpp  pve_batch_ac.cpp  pve_batch_single_recipient.cpp  pve_internal.h  schnorr2pc.cpp  schnorr_mp.cpp  tdh2.cpp  transport_adapter.h  util.h
src/cbmpc/capi/: CMakeLists.txt  access_structure_adapter.h  common.cpp  ecdsa2pc.cpp  ecdsa_mp.cpp  eddsa2pc.cpp  eddsa_mp.cpp  pve.cpp  pve_ac.cpp  pve_batch.cpp  pve_internal.h  schnorr2pc.cpp  schnorr_mp.cpp  tdh2.cpp  transport_adapter.h  util.h
src/cbmpc/core/: CMakeLists.txt  buf.cpp  buf.h  buf128.cpp  buf256.cpp  convert.cpp  error.cpp  extended_uint.cpp  strext.cpp
src/cbmpc/crypto/: CMakeLists.txt  base.cpp  base_bn.cpp  base_bn256.cpp  base_ec_core.cpp  base_ec_core.h  base_ecc.cpp  base_ecc_secp256k1.cpp  base_eddsa.cpp  base_hash.cpp  base_mod.cpp  base_paillier.cpp  base_rsa.cpp  base_rsa_oaep.cpp  drbg.cpp  ec25519_core.cpp  elgamal.cpp  lagrange.cpp  mlkem768.cpp  ro.cpp  secret_sharing.cpp  tdh2.cpp
src/cbmpc/protocol/: CMakeLists.txt  ec_dkg.cpp  (+22 more)
tests/: public_headers_smoke.cpp
tests/dudect/: dudect_elliptic_test.cpp
tools/benchmark/: CMakeLists.txt  benchmark.makefile  bm_agree_random.cpp  bm_commitment.cpp  bm_core_bn.cpp  bm_drbg.cpp  bm_ecdsa.cpp  bm_eddsa.cpp  bm_elgamal.cpp  bm_elliptic_curve.cpp  bm_hash.cpp  bm_ot.cpp  bm_paillier.cpp  bm_pve.cpp  bm_share.cpp  bm_sid.cpp  bm_tdh2.cpp  bm_test.cpp  bm_zk.cpp  mpc_util.h  util.h
tools/coverage/: coverage.makefile
(+189 files in other folders)
